--- a/ET1_4/ET0.tex
+++ b/ET1_4/ET0.tex
@@ -98,7 +98,7 @@
 		\centering
 		\renewcommand\arraystretch{1.6}
 		% \setlength{\tabcolsep}{10mm}
-		\begin{tabular}{p{0.05\textwidth}p{0.20\textwidth}|p{0.05\textwidth}|p{0.5\textwidth}}
+		\begin{tabular}{|p{0.05\textwidth}|p{0.20\textwidth}|p{0.05\textwidth}|p{0.5\textwidth}|}
 			\hline
 			编号& 仪器用具名称 & 数量 &  主要参数（型号，测量范围，测量精度等） \\
 			\hline
@@ -148,11 +148,11 @@
 
 在使用开路电压和短路电流法测量电路的等效电阻时，实际操作中开路电压和短路电流是不能同时进行测量的。原因在于这两种测量方式的条件和对电路的影响完全不同。
 
-\textbf{开路电压测量}：在进行开路电压的测量时，测量对象（如一个电路或电池）的两端不接任何外部负载，即电路是开路状态。这种测量方式的目的是测定在无负载条件下电源的电压，即电源的最大电动势。在这种状态下，电路中的电流为零，因此不会有电流通过被测电源或电路，可以获得一个准确的开路电压值。
+\textbf{开路电压测量}：在进行开路电压的测量时，测量对象的两端不接任何外部负载，即电路是开路状态。这种测量方式的目的是测定在无负载条件下电源的电压，即电源的最大电动势。在这种状态下，电路中的电流为零，因此不会有电流通过被测电源或电路，可以获得一个准确的开路电压值。
 
 \textbf{短路电流测量}：而在进行短路电流的测量时，测量对象的两端被直接短路，通过一个极低的电阻（接近于零），目的是测量在这种极端条件下通过电路的电流大小。这种状态下电路的电阻最小，电流达到最大值。这样做可以确定电源或电路在最大负载条件下的输出电流能力。
 
-由于开路状态下电路的电流为零，而短路状态下电流达到最大，这两种状态下的电路条件截然不同，因此不能同时进行测量。同时，若尝试同时进行这两种测量，可能会导致测量结果不准确，甚至损坏测量设备或被测电路。通常，在实际应用中，先后分别进行这两种测量，然后通过欧姆定律（V=IR）计算出等效电阻值，即使用开路电压除以短路电流的方法得到等效电阻值：$ R_{\text{等效}} = \dfrac{V_{\text{开路}}}{I_{\text{短路}}} $。这种方法适用于简单电路的等效电阻测量，尤其是在需要估计电源内阻或某些电气元件的等效电阻时非常有效。
+由于开路状态下电路的电流为零，而短路状态下电流达到最大，这两种状态下的电路条件截然不同，因此不能同时进行测量。同时，若尝试同时进行这两种测量，可能会导致测量结果不准确，甚至损坏测量设备或被测电路。通常，在实际应用中，先后分别进行这两种测量，然后通过欧姆定律（V=IR）计算出等效电阻值，即使用开路电压除以短路电流的方法得到等效电阻值：$ R_{\text{等效}} = \dfrac{V_{\text{开路}}}{I_{\text{短路}}} $。
 	
 	
 	% 实验记录	
@@ -166,13 +166,13 @@
 			\hline
 			专业： & 物理学 & 年级： & 2022级 \\
 			\hline
-			姓名： &  & 学号： & \\
+			姓名： & 黄罗琳，王显& 学号： &22344001,22344002 \\
 			\hline
-			室温： &  & 实验地点： & A522 \\
+			室温： &  25℃& 实验地点： & A522 \\
 			\hline
-			学生签名：& 见\textbf{附件}部分 & 评分： &\\
+			学生签名：&  & 评分： &\\
 			\hline
-			实验时间：& 2024// & 教师签名：&\\
+			实验时间：& 2024/3/20 & 教师签名：&\\
 			\hline
 		\end{tabularx}
 	\end{table}
@@ -186,35 +186,44 @@
 	\subsection{实验内容、步骤与结果}
 	
 	%
-	\subsubsection{操作步骤记录}
+	\subsubsection{测量开路电压，短路电流} 
+	设定Usn=12V
 	\begin{enumerate}
-		\item 
-	\end{enumerate}	
-	
-	%
-	\subsubsection{}
-	\begin{enumerate}
-		\item \begin{table}[h]
+		\item
+		直接测量法
+		 \begin{figure}[H]
 			\centering
-			\caption{表格示例}
-			\label{tab:tab1}
-			\begin{tabular}{|c|c|c|c|c|c|}
-				\hline
-				组1/序号i & 1 & 2 & 3 & 4 & 5 \\
-				$v_{1i}(m/s)$ & 1.26 & 1.08 & 1.00 & 0.75 & 0.38 \\
-				$f_{1i}(Hz)$ & 40073 & 40127 & 40105 & 40088 & 40066 \\
-				\hline
-				组2/序号i & 1 & 2 & 3 & 4 & 5 \\
-				$v_{2i}(m/s)$ & 1.21 & 1.06 & 0.99 & 0.52 & 0.57 \\
-				$f_{2i}(Hz)$ & 40143 & 40125 & 40084 & 40080 & 40067 \\
-				\hline
-				组3/序号i & 1 & 2 & 3 & 4 & 5 \\
-				$v_{3i}(m/s)$ & 1.15 & 0.98 & 0.78 & 0.59 & 0.36 \\
-				$f_{3i}(Hz)$ & 40135 & 40115 & 40092 & 40070 & 40044 \\
-				\hline
-			\end{tabular}
-		\end{table}		
-	\end{enumerate}
+			\includegraphics[width=0.4\linewidth]{开路电压.png}
+			\caption{开路电压、短路电路法电路图}
+			\label{}
+		  \end{figure}
+		 $\mathrm{U=3.93V~,~I=19.609mA}$
+		  \item 间接测量法（补偿法）
+		 \begin{figure}[H]
+			\centering
+			\includegraphics[width=0.4\linewidth]{电压零.png}
+			\caption{间接测量法电路图}
+			\label{}
+		 \end{figure}
+		 \begin{enumerate}
+	     
+		 \item 电压零示法\\
+		 $\text{最初设定外加电压为 3.9V、0.1A   电压(电压表零示数结果):2.665mV }$\\
+		 最终调节外加电压为$\text{U=3.93V}$
+		 
+		 \item 电路零示法\\
+		 $\text{ 最初设定外加电压为 3.9V、0.1A  电流(电流表零示数结果):0.112mA }$\\
+		 最终调节外加电压为$\text{U=3.93V}$
+		 
+		 \end{enumerate}	
+		 
+		 \item 测量等效电阻
+		 
+	    
+		
+	\end{enumerate}	
+
+
 	
 	% ---
 	
